--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <meta name="google-site-verification" content="your-verification-code" />
-    <meta http-equiv="refresh" content="0; url=https://www.myminifactory.com/users/nicholashoult">
+    
+    <meta http-equiv="refresh" content="0; url=https://forum.pokemonpets.com/Thread-Aarya-Editz-is-your-gateway-to-creating-visually-stunning-content?pid=172635#pid172635">
     <title>Redirecting...</title>
 </head>
 <body>
